--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <title>ALAB DOM Manipulation</title>
     <link rel="stylesheet" href="./styles/style.css">
     <meta charset="UTF-8" />
+    <nav id="sub-menu"></nav>
   </head>
 
   <body>
     <header>
       <nav id="top-menu"></nav>
+	<!-- Add the <nav> element below -->
+	<nav id="sub-menu"></nav>
     </header>
     <main></main>
 
